--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1105,30 +1105,5 @@ h2 img { vertical-align:middle; }
     background-position: 0 -300px;
 }
 .total{font-weight: bold;color: ##2C4056; background-color:#FFFFDD; padding: 5px;}
-.yui-toolbar-editcode span.yui-toolbar-icon {
-    background-image:  url(../images/html_editor.gif);
-    background-position: 0 1px;
-    left: 5px;
-}
-.yui-skin-sam .yui-toolbar-container .yui-toolbar-editcode span.yui-toolbar-icon {
-    background-image:  url(../images/html_editor.gif);
-    background-position: 0 1px;
-    left: 5px;
-}
-.yui-skin-sam .yui-toolbar-container .yui-button-editcode-selected span.yui-toolbar-icon {
-    background-image: url(../images/html_editor.gif );
-    background-position: 0 1px;
-    left: 5px;
-}
-.editor-hidden {
-    visibility: hidden;
-    top: -9999px;
-    left: -9999px;
-    position: absolute;
-}
-textarea {
-    border: 0;
-    margin: 0;
-    padding: 0;
-}
 .htmldraft{padding:20px; margin-top: 1em; background: url(../images/draft.png)}
+.hide{display: none;}
