--- a/app/views/editorial/profilo_edit.html.erb
+++ b/app/views/editorial/profilo_edit.html.erb
@@ -1,4 +1,3 @@
-<%# form_tag({:action => :update}, {:method => :put})form_tag({:action => controller.action_name, :id => @project, :path => to_path_param(@path), :rev => ''}, {:method => :get, :id => 'revision_selector'}) do -%>
 <style>
     .thumb {
         height: 120px;
@@ -6,99 +5,129 @@
         margin: 10px 5px 0 0;
     }
 </style>
-<%= include_yui_editor_if_used %>
-
-<% form_tag({:action => "profilo_edit", :id => @user_profile, :method => :post}, :multipart => true) do %>
-    <%= hidden_field_tag :user_id, @user_profile.user_id %>
-    <div class="fs-profiles-esx">
-      <div id="fs-photo-edit">
-        <% if @user_profile.use_gravatar? %>
-            <%= '<div id="fs-photo-edit-i"></div><div id="fs-photo-edit-a" style="display:none;">' + image_tag(@user_profile.photo.url(:l)) + '</div>
+<div id="fs-profilo">
+  <% form_tag({:action => "profilo_edit", :id => @user_profile, :method => :post}, :multipart => true) do %>
+      <%= hidden_field_tag :user_id, @user_profile.user_id %>
+      <div class="fs-profiles-esx">
+        <div id="fs-photo-edit">
+          <% if @user_profile.use_gravatar? %>
+              <%= '<div id="fs-photo-edit-i"></div><div id="fs-photo-edit-a" style="display:none;">' + image_tag(@user_profile.photo.url(:l)) + '</div>
           <div id="fs-photo-edit-g" style="display:block;">' + gravatar_for(@user_profile.user, :size => 120) + ' </div>' %>
-        <% else %>
-            <%= '<div id="fs-photo-edit-i"></div><div id="fs-photo-edit-a" style="display:block;">' + image_tag(@user_profile.photo.url(:l)) + '</div>
+          <% else %>
+              <%= '<div id="fs-photo-edit-i"></div><div id="fs-photo-edit-a" style="display:block;">' + image_tag(@user_profile.photo.url(:l)) + '</div>
           <div id="fs-photo-edit-g" style="display:none;">' + gravatar_for(@user_profile.user, :size => 120) + ' </div>' %>
-        <% end %>
+          <% end %>
+        </div>
+        <div class="fs-vuoto-inline-button  fs-profiles-esx-btn">
+          <label><%= radio_button_tag :use_gravatar, true, @user_profile.use_gravatar?, :onchange => "funct_avatar('g')" %> <%= 'Usa mail su Gravatar' %></label><br/>
+          <label><%= radio_button_tag :use_gravatar, false, !@user_profile.use_gravatar?, :onchange => "funct_avatar('a')" %> <%= 'Usa tua immagine Avatar' %></label><br/>
+          <%= file_field_tag :photo, :onchange => "handleFileSelect('handleFileSelect, false'})" %>
+        </div>
       </div>
+      <div class="fs-profiles-ecx">
+        <p>
+          <%= label_tag :fs_qualifica %><br/>
+          <%= text_field_tag :fs_qualifica, @user_profile.fs_qualifica %>
+        </p>
 
-      <%# image_tag @user_profile.photo.url(:l) %>
+        <p>
+          <%= label_tag :fs_tel %><br/>
+          <%= text_field_tag :fs_tel, @user_profile.fs_tel %>
+        </p>
 
-      <div class="fs-vuoto-inline-button  fs-profiles-esx-btn">
-        <label><%= radio_button_tag :use_gravatar, true, @user_profile.use_gravatar?, :onchange => "funct_avatar('g')" %> <%= 'Usa mail su Gravatar' %></label><br/>
-        <label><%= radio_button_tag :use_gravatar, false, !@user_profile.use_gravatar?, :onchange => "funct_avatar('a')" %> <%= 'Usa tua immagine Avatar' %></label><br/>
-        <%= file_field_tag :photo, :onchange => "handleFileSelect('handleFileSelect, false'})" %>
+        <p>
+          <%= label_tag :fs_fax %><br/>
+          <%= text_field_tag :fs_fax, @user_profile.fs_fax %>
+        </p>
+
+        <p>
+          <%= label_tag :fs_skype %><br/>
+          <%= text_field_tag :fs_skype, @user_profile.fs_skype %>
+        </p>
+
+        <p>
+          <%= label_tag :fs_mail %><br/>
+          <%= text_field_tag :fs_mail, @user_profile.fs_mail %>
+        </p>
+
+        <p>
+          <%= label_tag :fs_external_url %><br/>
+          <%= text_field_tag :external_url, @user_profile.external_url %>
+        </p>
       </div>
-    </div>
-    <div class="fs-profiles-ecx">
-      <p>
-        <%= label_tag :fs_qualifica %><br/>
-        <%= text_field_tag :fs_qualifica, @user_profile.fs_qualifica %>
-      </p>
+      <div class="fs-profiles-edx">
+        <div class="fs-profiles-radio-buttons">
+          <%= label_tag l(:label_display_in) %> &nbsp;<br/>
+          <label><%= radio_button_tag :display_in, 1, @user_profile.display_in == 1 %> <%= 'Collaboratori' %></label><br/>
+          <label><%= radio_button_tag :display_in, 2, @user_profile.display_in == 2 %> <%= 'Responsabili' %></label><br/>
+          <label><%= radio_button_tag :display_in, 3, @user_profile.display_in == 3 %> <%= 'Direttori' %></label><br/>
+          <label><%= radio_button_tag :display_in, 4, @user_profile.display_in == 4 %> <%= 'Non Visibile' %></label><br/>
+        </div>
+        <p style="padding:5px 0;"></p>
 
-      <p>
-        <%= label_tag :fs_tel %><br/>
-        <%= text_field_tag :fs_tel, @user_profile.fs_tel %>
-      </p>
+        <p>  <%= submit_tag "salva", :action => 'profilo_edit', :class => "fs-giallo-button" %></p>
 
-      <p>
-        <%= label_tag :fs_fax %><br/>
-        <%= text_field_tag :fs_fax, @user_profile.fs_fax %>
-      </p>
+        <p style="padding:5px 0;"> altrimenti</p>
 
-      <p>
-        <%= label_tag :fs_skype %><br/>
-        <%= text_field_tag :fs_skype, @user_profile.fs_skype %>
-      </p>
+        <p>  <%= link_to "annulla", :back, :class => "fs-giallo-button", :style => "float:none;" %></p>
 
-      <p>
-        <%= label_tag :fs_mail %><br/>
-        <%= text_field_tag :fs_mail, @user_profile.fs_mail %>
-      </p>
+        <p style="padding:5px 0;"> oppure </p>
 
-      <p>
-        <%= label_tag :fs_external_url %><br/>
-        <%= text_field_tag :external_url, @user_profile.external_url %>
-      </p>
-    </div>
-    <div class="fs-profiles-edx">
-
-      <div class="fs-profiles-radio-buttons">
-        <%= label_tag l(:label_display_in) %> &nbsp;<br/>
-        <label><%= radio_button_tag :display_in, 1, @user_profile.display_in == 1 %> <%= 'Collaboratori' %></label><br/>
-        <label><%= radio_button_tag :display_in, 2, @user_profile.display_in == 2 %> <%= 'Responsabili' %></label><br/>
-        <label><%= radio_button_tag :display_in, 3, @user_profile.display_in == 3 %> <%= 'Direttori' %></label><br/>
-        <label><%= radio_button_tag :display_in, 4, @user_profile.display_in == 4 %> <%= 'Non Visibile' %></label><br/>
-
+        <p>  <%= link_to("elimina profilo", profile_destroy_path(@user_profile.id), :class => "fs-rosso-button", :confirm => "conferma?") %></p>
       </div>
-      <p style="padding:5px 0;"></p>
+      <div class="cleared"></div>
+      <div class="yui-skin-sam">
+        <%= label_tag l(:label_titoli) %>
+        <br/>
 
-      <p>  <%= submit_tag "salva", :action => 'profilo_edit', :class => "fs-giallo-button" %></p>
+        <p><%= text_area_tag :titoli, :name => 'titoli', :required => false, :cols => 120, :rows => 15 %>  </p>
+      </div>
+      <div class="yui-skin-sam">
+        <%= label_tag l(:label_curriculum) %>
+        <br/>
 
-      <p style="padding:5px 0;"> altrimenti</p>
-
-      <p>  <%= link_to "annulla", :back, :class => "fs-giallo-button", :style => "float:none;" %></p>
-
-      <p style="padding:5px 0;"> oppure </p>
-
-      <p>  <%= link_to("elimina profilo", profile_destroy_path(@user_profile.id), :class => "fs-rosso-button", :confirm => "conferma?") %></p>
-    </div>
-    <div class="cleared"></div>
-    <p>
-      <%= label_tag l(:label_titoli) %><br/>
-      <%= text_area_tag :titoli, @user_profile.titoli, :cols => 20, :rows => 30, :class => 'rich_text_editor'  %>
-    </p>
-
-    <p>
-      <%= label_tag l(:label_curriculum) %><br/>
-      <%= text_area_tag :curriculum, @user_profile.curriculum , :cols => 20, :rows => 30, :class => 'rich_text_editor'  %>
-    </p>
-
-
+        <p><%= text_area_tag :curriculum, :name => 'curriculum', :required => false, :cols => 120, :rows => 15 %>  </p>
+      </div>
+  <% end %>
+</div>
+<% content_for :header_yui do %>
+    <%= stylesheet_link_tag 'yui/skin.css', :media => 'all' %>
+    <%= javascript_include_tag "yui/yahoo-dom-event.js" %>
+    <%= javascript_include_tag "yui/element-min.js" %>
+    <%= javascript_include_tag "yui/container_core-min.js" %>
+    <%= javascript_include_tag "yui/menu-min.js" %>
+    <%= javascript_include_tag "yui/button-min.js" %>
+    <%= javascript_include_tag "yui/editor-min.js" %>
+    <%= javascript_include_tag "yui/yui_fs.js" %>
 <% end %>
+<script type="text/javascript" charset="utf-8">
+    (function () {
+        var myConfig1 = {
+            handleSubmit:true,
+            height:'200px',
+            width:'95%',
+            resize:true,
+            animate:true,
+            dompath:true,
+            focusAtStart:true,
+            nodeChangeDelay:false,
+            removeLineBreaks:true,
+            drag:true
+        };
+        var myEditor1 = init_yui_editor_fs('titoli', myConfig1);
+        var myConfig2 = {
+            handleSubmit:true,
+            height:'400px',
+            width:'95%',
+            animate:true,
+            dompath:true,
+            focusAtStart:true
+        };
+        init_yui_editor_fs('curriculum', myConfig2);
+    })
+            ();
 
-<%# wikitoolbar_for 'titoli' %>
-<%# wikitoolbar_for 'curriculum' %>
-
+</script>
 <script>
     // valori accettati 1= Immagine Avatar Papareclip , 0 = Immagine Gravatar , 2  = Nuova immagine upload
     function funct_avatar(val) {
