--- a/public/stylesheets/style.plus.css
+++ b/public/stylesheets/style.plus.css
@@ -1602,7 +1602,7 @@ right: -14px;   */
 }
 
 .fs-profiles-esx-btn {
-    width: 91%;
+    width: 93%;
     margin-left: 5px;
 
 }
@@ -1650,6 +1650,7 @@ right: -14px;   */
 .fs-my-avatar-m {
     padding: 3px;
     height: 80px;
+    width: 80px;
     background: transparent;
     -webkit-box-shadow: inset 0 0 2px 2px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: inset 0 0 2px 2px rgba(0, 0, 0, 0.2);
@@ -1674,6 +1675,13 @@ right: -14px;   */
 .fs-my-avatar img {
     border: solid 2px #ffa238;
 }
+#fs-profilo label{
+ color: #2C4056;
+    line-height: 1.5em;
+    font-weight: bold;
+}
+
+
 
 /* ===================== fine  chi siamo (user profiles)  ===================== */
 /* inizio slide */
