--- a/app/views/top_sections/edit.html.erb
+++ b/app/views/top_sections/edit.html.erb
@@ -1,18 +1,8 @@
 <h2><%= link_to l(:label_top_section_plural), top_sections_path %> &#187; <%= h(@top_section) %></h2>
-
-
-<!-- :url => { :action => 'update' 'edit' }
-< form_for(@top_section) do |f| >
-< labelled_tabular_form_for :top_section, @top_section, :url => { :action => 'update' }, :html => {:id => 'top_section_form'} do |f| >
-<= f.submit 'Update' >
- --> 
-
-<% labelled_form_for (@top_section) do |f| %>
-<%= submit_tag l(:button_save) %>
-<%= render :partial => 'form', :locals => { :f => f } %>
-<%= submit_tag l(:button_save) %>
-<!-- <%= f.submit 'Update' %> --> 
-
-
+<% labelled_form_for @top_section, :html => {:multipart => true} do |f| %>
+    <%= render :partial => 'form', :locals => {:f => f} %>
+    <div id="buttons-inline">
+      <%= submit_tag l(:button_save) %> <%= button_to "Annulla",'/top_sections/' + @top_section.id.to_s %>
+    </div>
 <% end %>
 
