--- a/app/views/top_sections/index.html.erb
+++ b/app/views/top_sections/index.html.erb
@@ -1,39 +1,36 @@
 <div class="contextual">
-<%= link_to l(:label_top_section_new), new_top_section_path, :class => 'icon icon-add' %>
+  <%= link_to l(:label_top_section_new), new_top_section_path, :class => 'icon icon-add' %>
 </div>
-
 <h2><%= l(:label_top_section_plural) %></h2>
-
-<%# if !@top_sections.nil? && @top_sections.any? %>
 <% if @top_sections && @top_sections.any? %>
-<table class="list top_sections">
-  <thead><tr>
-  <%= sort_header_tag('sezione_top', :title => l(:label_top_section), :style => 'width: 40%;text-align:left;')%>
-  <%= sort_header_tag('ordinamento', :title => l(:label_ordinamento), :style => 'color:red; width: 10%;')%>
-  <th style='width: 20%;'><%= l(:label_immagine)%></th>
-  <%= sort_header_tag('chiave', :title => l(:label_key), :style => 'width: 20%;')%>
-  <%= sort_header_tag('menu', :title => l(:label_top_menu), :style => 'width: 20%;text-align:left;')%>
-  <%= sort_header_tag('se_visibile', :title => l(:label_se_visibile), :style => 'width: 10%;')%>
-  <th style='width: 5%;'></th>
-  <th style='width: 5%;'></th>
-  </tr></thead>
-  <tbody>
-<% @top_sections.each do |top_section| %>
-      <tr class="<%= cycle 'odd', 'even' %>">
-    <td><%= link_to h(top_section), top_section_path(top_section) %></td>
-    <td align="center"><%=h top_section.ordinamento %></td>
-    <td><%=h top_section.immagine %></td>
-     <td align="left"><%=h top_section.key %></td>
-    <td align="left"><%= link_to h(top_section.top_menu), top_menu_path(top_section.top_menu_id) %></td>
-    <td align="center"><%= check_box_tag l(:label_private), 1, top_section.se_visibile, :disabled => 'disabled' %></td>
-    <td class="buttons"><%= link_to('', edit_top_section_path(top_section), :class => 'icon icon-edit') if User.current.admin? %></td>
-    <td class="buttons"><%= link_to ('', top_section, :confirm => l(:text_are_you_sure), :method => :delete, :class => 'icon icon-del') if User.current.admin? %></td>
-  </tr>
-<% end %>
-</table>
-
-<p class="pagination"><%= pagination_links_full @top_section_pages, @top_section_count %></p>
-
+    <table class="list top_sections">
+      <thead>
+      <tr>
+        <th style='width: 35px;'></th>
+        <%= sort_header_tag('sezione_top', :title => l(:label_top_section), :style => 'width: 40%; text-align:left;') %>
+        <%= sort_header_tag('chiave', :title => l(:label_key), :style => 'width: 25%; text-align:left') %>
+        <%= sort_header_tag('menu', :title => l(:label_top_menu), :style => 'width: 25%; text-align:left;') %>
+        <%= sort_header_tag('ordinamento', :title => l(:label_ordinamento), :style => 'color:red; width: 5%;') %>
+        <%= sort_header_tag('se_visibile', :title => l(:label_se_visibile), :style => 'width: 5%;') %>
+        <th style='width: 5%;'></th>
+        <th style='width: 5%;'></th>
+      </tr>
+      </thead>
+      <tbody>
+      <% @top_sections.each do |top_section| %>
+          <tr class="<%= cycle 'odd', 'even' %>">
+            <td> <%= image_tag top_section.image.url(:xs) %></td>
+            <td><%= link_to h(top_section), top_section_path(top_section) %></td>
+            <td align="left"><%= h top_section.key %></td>
+            <td align="left"><%= link_to h(top_section.top_menu), top_menu_path(top_section.top_menu_id) %></td>
+            <td align="center"><%= h top_section.ordinamento %></td>
+            <td align="center"><%= check_box_tag l(:label_private), 1, top_section.se_visibile, :disabled => 'disabled' %></td>
+            <td class="buttons"><%= link_to('', edit_top_section_path(top_section), :class => 'icon icon-edit') if User.current.admin? %></td>
+            <td class="buttons"><%= link_to ('', top_section, :confirm => l(:text_are_you_sure), :method => :delete, :class => 'icon icon-del') if User.current.admin? %></td>
+          </tr>
+      <% end %>
+      </table>
+    <p class="pagination"><%= pagination_links_full @top_section_pages, @top_section_count %></p>
 <% else %>
-<p class="nodata"><%= l(:label_no_data) %></p>
+    <p class="nodata"><%= l(:label_no_data) %></p>
 <% end %>
