--- a/public/stylesheets/style.plus.css
+++ b/public/stylesheets/style.plus.css
@@ -327,6 +327,7 @@
     text-decoration: none;
     font-style: normal;
     text-align: left;
+    color: #a52a2a;
 }
 #fs-login2-txt{
 width:175px;
