--- a/app/views/editorial/_tramenu_login.html.erb
+++ b/app/views/editorial/_tramenu_login.html.erb
@@ -1,20 +1,23 @@
 <% if User.current && User.current.logged? %>
     <p class="fs-tramenu-blockheader x-granata">Utente:&nbsp; <%= User.current.name() %></p>
-    <div class="fs-blockcontent fs-login-logged">
-        <% if User.current.user_profile %>
-            <div id='fs-login-avatar'>
-                <div class="fs-login"><%= User.current.user_profile.my_avatar(:xs) %>
+    <div class="fs-login-logged">
+                  <div id='fs-login-avatar'>
+                   <div class="fs-login">
+                     <% if User.current.user_profile %>
+                  <%= User.current.user_profile.my_avatar(:xs) %>
+                  <% else %>
+                      <%= image_tag "/images/commons/xs-no_avatar.jpg", :class => 'fs-vuoto-inline3-button'  %>
+                  <% end  %>
                 </div>
-        <% end %>
         <% if User.current.canbackend? %>
                 <div class="fs-login" id="fs-login-txt">
-                    <%= link_to "Accesso FISMINE", url_for(:controller => 'activities', :action => 'index'), :class => 'fs-vuoto-inline3-button' %>
+                    <%= link_to "Accesso FISMINE", url_for(:controller => 'activities', :action => 'index' , :id => nil), :class => 'fs-vuoto-inline3-button' %>
                         <br/>
                     <% @uid = User.current.user_profile %>
                         <% if !@uid.nil? %>
                             <%= link_to "Profilo Pubblico", url_for(:controller => 'editorial', :action => 'profilo_show', :id => @uid), :class => 'fs-vuoto-inline3-button' %>
                         <% else %>
-                            <%= link_to "Nuovo Profilo", url_for(:controller => 'editorial', :action => 'profilo_new'), :class => 'fs-vuoto-inline3-button' %>
+                            <%= link_to "Nuovo Profilo", url_for(:controller => 'editorial', :action => 'profilo_new', :id => @uid), :class => 'fs-vuoto-inline3-button' %>
                         <% end %>
                 </div>
                 <div class="fs-login">
