--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -116,7 +116,7 @@ a.issue.closed, a.issue.closed:link, a.issue.closed:visited { color: #999; text-
 /***** Tables *****/
 table.list { border: 1px solid #e4e4e4;  border-collapse: collapse; width: 100%; margin-bottom: 4px; }
 table.list th {  background-color:#EEEEEE; padding: 4px; white-space:nowrap; }
-table.list td { vertical-align: top; }
+table.list td { vertical-align: middle; }
 table.list td.id { width: 2%; text-align: center;}
 table.list td.checkbox { width: 15px; padding: 2px 0 0 0; }
 table.list td.checkbox input {padding:0px;}
@@ -1104,6 +1104,10 @@ h2 img { vertical-align:middle; }
 .fs-quesiti-status-5 {
     background-position: 0 -300px;
 }
-.total{font-weight: bold;color: ##2C4056; background-color:#FFFFDD; padding: 5px;}
+.total{font-weight: bold;color: #2C4056; background-color:#FFFFDD; padding: 5px;}
 .htmldraft{padding:20px; margin-top: 1em; background: url(../images/draft.png)}
 .hide{display: none;}
+
+#buttons-inline div{
+    display: inline-block;
+}
