--- a/app/views/mio_profilo/_tramenu_login.erb
+++ b/app/views/mio_profilo/_tramenu_login.erb
@@ -23,24 +23,24 @@
               <%= link_to l(:label_my_page), :controller => 'mio_profilo', :action => 'account' %>
             </li>
         <% end %>
-        <% if User.current && User.current.sigla_tipo() %>
+        <% if User.current.associazione_affiliata %>
             <li>
-              AFFILIATO: <%= link_to h(User.current.sigla_tipo()), asso_path(User.current.sigla_tipo()) %>
+              Associato a: <br /> <%= link_to h(User.current.associazione_affiliata), asso_path(User.current.associazione_affiliata) %>
             </li>
+        <% else %>
+            <% if User.current.sigla_tipo() %>
+                <li>
+                  Affiliato a:<br /> <%= link_to h(User.current.sigla_tipo()), cross_organization_path(User.current.sigla_tipo()) %>
+                </li>
+            <% end %>
         <% end %>
-        <% if User.current && User.current.organization() %>
-            <li>
-              CROSS
-              ORGANIZATION: <%= link_to h(User.current.organization()), cross_organization_path(User.current.organization()) %>
-            </li>
-        <% end %>
-        <% if User.current && User.current.responsable? && User.current.responsable_of
+        <% if User.current.responsable? && User.current.responsable_of
              User.current.responsable_of.each do |organismo| %>
                 <li>
-                  <%= link_to h(organismo), organismo_path(organismo) %>
+                    <%= link_to h(organismo), organization_path(organismo) %>
                 </li>
             <% end
-               end %>
+        end %>
         <li>
           <%= link_to l(:label_logout), :signout %>
         </li>
@@ -88,5 +88,3 @@
       </ul>
     </div>
 <% end %>
-
-
