--- a/app/views/users/_fatture.html.erb
+++ b/app/views/users/_fatture.html.erb
@@ -1,6 +1,8 @@
 <% form_for @user, :url => { :action => 'edit_fatture', :id => @user}, :builder => TabularFormBuilder do |f| %>
 
   <div id="edit_dati_form">
+newsletter_smtp
+
     <!--[form:user]-->
     <div class="splitcontentleft">
       <fieldset class="box tabular">
