--- a/app/views/users/_fatture.html.erb
+++ b/app/views/users/_fatture.html.erb
@@ -1,4 +1,5 @@
-<% form_for @user, :url => { :action => 'edit_fatture', :id => @user}, :builder => TabularFormBuilder do |f| %>
+<% remote_form_for(:user, :url => { :action => 'edit_fatture', :id => @user}, :builder => TabularFormBuilder, :html => {:method => :post}) do |f| %>
+<%# form_for @user, :url => { :action => 'edit_fatture', :id => @user}, :builder => TabularFormBuilder do |f| %>
 
   <div id="edit_dati_form">
 newsletter_smtp
@@ -12,9 +13,20 @@ newsletter_smtp
 
         <p><%= f.text_area :pagamento_precedente, :label => :field_pagamento_precedente, :required => false, :cols => 60, :rows => 15, :class => 'wiki-edit' %></p>
 
-        <p><%= f.date_select :data_ultimo_pagamento, :label => :field_data_ultimo_pagamento %></p>
-        <p><%= f.date_select :data_accredito, :label => :field_data_accredito %></p>
-        <p><%= f.text_field :anno_competenza, :label => :field_anno_competenza, :required => false, :size => 3  %></p>
+        <p>
+          <%# f.date_select :data_ultimo_pagamento, :label => :field_data_ultimo_pagamento %>
+          <%= f.text_field :data_ultimo_pagamento, :label => l(:field_data_ultimo_pagamento), :size => 10 %><%= calendar_for('user_data_ultimo_pagamento') %>
+        </p>
+        <p>
+          <%# f.date_select :data_accredito, :label => :field_data_accredito %>
+          <%= f.text_field :data_accredito, :label => l(:field_data_accredito), :size => 10 %><%= calendar_for('user_data_accredito') %>
+        </p>
+        <p>
+          <%# f.text_field :anno_competenza, :label => :field_anno_competenza, :required => false, :size => 3  %>
+          <% dates = (Date.today.year-5)..(Date.today.year+5)  %>
+          <%= f.select(:anno_competenza, dates.collect {|d| [d.to_s,d.to_s]}, {:include_blank => "Select", :selected => @user.anno_competenza.to_s }, {:class => "some_class"} )  %>
+          <%# select_year :anno_competenza, {:label => :field_anno_competenza, :required => false, :size => 3, :include_blank => true, :default => nil}  %>
+        </p><%= @user.anno_competenza %>
         <p><%= f.text_field :crediti, :label => :field_crediti, :required => false, :size => 3  %></p>
 
         <p><%= f.text_area :annotazioni, :label => :field_annotazioni, :required => false, :cols => 60, :rows => 15, :class => 'wiki-edit' %></p>
